--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@ img {
 .section__subtitle {
   display: block;
   font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1-5);
 }
 .section__title,
 .section__subtitle {
@@ -159,8 +160,14 @@ img {
   }
 }
 @media screen and (max-width:768px) {
+  body {
+    margin: 0 0 var(--header-height) 0;
+  }
   .section {
     padding: 2rem 0 4rem;
+  }
+  .section__subtitle {
+    margin-bottom: var(--mb-3);
   }
 }
 @media screen and (max-width:576px) {
