--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -19,7 +19,13 @@
     border-radius: 0.75rem;
     text-align: center;
     padding: 1rem 1.25rem;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
 }
+.about__box:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
 .about__icon {
     font-size: 1.5rem;
     color: var(--title-color);
