--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -9,7 +9,13 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 2rem 4rem;
     border-radius: 1.25rem;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.skills__content:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
 
 .skills__title {
     font-size: var(--normal-font-size);
@@ -50,6 +56,21 @@
     font-size: var(--tiny-font-size);
 
 }
+
+.progress {
+    width: 100%;
+    height: 3px;
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+  
+  .progress-bar {
+    height: 100%;
+    background-color: var(--title-color);
+    border-radius: 4px;
+    transition: width 0.5s ease;
+  }
 
 
 /*---------------------Break Points--------------*/
