--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--body-color);   
+    background-color: var(--body-color);
 }
 
 .nav {
@@ -14,10 +14,15 @@
     align-items: center;
     column-gap: 1rem;
 }
-.nav__logo,
-.nav__toggle {
+.nav__logo {
     color: var(--title-color);
     font-weight: var(--font-medium);
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.nav__logo:hover {
+    color: var(--title-color-dark);
+    transform: scale(1.1);
 }
 .nav__list {
     display: flex;
@@ -31,18 +36,61 @@
   font-size: var(--small-font-size);
   color: var(--title-color);
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: color 0.3s ease, transform 0.3s ease;
 }
-.nav__close,
-.nav__toggle  {
-    display: none;
-}
-
-.active-link,
 .nav__link:hover {
     color: var(--title-color-dark);
+    transform: translateY(-5px);
+}
+.nav__close,
+.nav__toggle {
+    display: none;
+    color: var(--title-color);
+    font-size: 1.5rem;
+    font-weight: var(--font-medium);
+    cursor: pointer;
+    transition: color 0.3s ease;
 }
 
+.nav__close:hover,
+.nav__toggle:hover {
+    color: var(--title-color-dark);
+}
+.nav__bottom {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
+  }
+  
+  .theme-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .theme-toggle:focus {
+    outline: none;
+  }
+  
+  .nav__close {
+    cursor: pointer;
+    color: var(--title-color);
+    font-size: 1.5rem;
+    transition: color 0.3s ease;
+  }
+  
+  .nav__close:hover {
+    color: var(--title-color-dark);
+  }
 /*---------------------Break Points--------------*/
 @media screen and (max-width:768px) {
     .header {
@@ -61,10 +109,8 @@
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
         border-radius: 1.5rem 1.5rem 0 0;
-        transition: .3s;
+        transition: bottom 0.3s ease;
     }
-
-    /* Show menu */
     .show-menu {
         bottom: 0;
     }
@@ -75,14 +121,16 @@
         gap: 2rem;
     }
 
-    .nav__close{
+    .nav__bottom {
         position: absolute;
-        right: 1.3rem;
-        bottom: 0.5rem;
-        font-size: 1.5rem;
-        cursor: pointer;
-        color: var(--title-color);
-    }
+        bottom: 1rem;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1.5rem;
+      }
     
     .nav__close:hover {
         color: var(--title-color-dark);
