--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -7,6 +7,11 @@
   width: 350px;
   border-radius: 1.5rem;
   justify-self: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.about__img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 .about__info {
     grid-template-columns: repeat(3, 140px);
