--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -25,7 +25,7 @@
     text-align: center;
     padding: 1rem 1.25rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-
+    cursor: pointer;
 }
 .about__box:hover {
     transform: translateY(-3px);
