--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -19,6 +19,7 @@
 }
 
 .contact__card {
+    cursor: pointer;
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
