--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -5,6 +5,7 @@
 }
 
 .skills__content {
+    cursor: pointer;
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 2rem 4rem;
